<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    android:paddingStart="24dp"
    android:background="@drawable/login_background"
    tools:context=".Login">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Let's sign you in!"
        android:textSize="36sp"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/primary"
        android:layout_marginStart="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/captionsignin"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:text="@string/caption_signin"
        android:textSize="16sp"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/graybd"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup"
        />

    <ImageView
        android:id="@+id/IVSignin"
        android:layout_width="157dp"
        android:layout_height="157dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/malememoji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/captionsignin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ETSIForm1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/email"
        android:padding="8dp"
        android:textColorHint="@color/graybd"
        app:boxBackgroundColor="@color/softblue"
        app:boxStrokeColor="@color/primary"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primary"
        app:hintTextColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IVSignin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailogin"
            android:layout_width="345dp"
            android:layout_height="62dp"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ETSIForm2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:hint="@string/password"
        app:boxBackgroundColor="@color/softblue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextColor="@color/primary"
        android:textColorHint="@color/graybd"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/primary"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/ETSIForm1"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordlogin"
            android:layout_width="345dp"
            android:layout_height="62dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/signin_btn"
        android:layout_width="336dp"
        android:layout_height="62dp"
        android:text="Sign-in"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/inter_regular"
        android:background="@drawable/btn_primary"
        android:layout_marginTop="24dp"
        android:layout_marginStart="14dp"
        app:layout_constraintTop_toBottomOf="@+id/ETSIForm2"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_btn">

        <TextView
            android:id="@+id/TVAlready"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="Forgot your password?"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_clickhere"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="16dp"
            android:background="#00000000"
            android:paddingStart="8dp"
            android:text="Click Here"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/TVAlready"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/already">

        <TextView
            android:id="@+id/TVAlready1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="Don't have an account yet?"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_clickhere1"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="16dp"
            android:background="#00000000"
            android:paddingStart="8dp"
            android:text="Click Here"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/TVAlready1"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>